(Format: Year/Month/Day)
Changes for 0.9.10:
*04/05/02:
  * Added new nls item for windowmenu: Layer
    nls/C/Windowmenu.m    
  * New command: exit
    (Henrik)
    FbCommandFactory.cc
  * Fixed loading of a windowmenu file. (Henrik)
    New resource:
     * session.screen<num>.windowMenu: <filename>
    The menu file format is the same as the normal ~/.fluxbox/menu
    but with some special menu items:
    [iconify], [maximize], [shade], [close], [extramenus]
    [layer], [sendto]
    + the all the other menu items that you can use in the normal
      root menu (i.e [exec] (aterm) {aterm})
    The [extramenus] will add  "remember" menu
    example: session.screen0.windowMenu: ~/.fluxbox/windowmenu
        [begin]
        [exec] (aterm) {aterm}
        [maximize]
        [shade]
        [stick]
        [submenu] (advanced)
           [layer]
           [sendto]
           [extramenus]
        [end]
        [separator]
        [close]
        [end]
  * Moved out some simple classes from Screen.cc (Henrik)
    new files:
    StyleMenuItem.hh/cc
  * Fixed new menu parsing  (Henrik)
    everything goes through MenuCreator now.
    Window.cc, Screen.hh/cc, fluxbox.cc/hh
    new files: 
    MenuCreator.cc/hh, Parser.hh/cc, FbMenuParser.hh/cc, 
    IconMenu.hh/cc, WorkspaceMenu.hh/cc
*04/04/30:
  * fix up reparent issue that affects java menus (thanks Scott Moser)
    Window.cc
*04/04/28:
  * Fix key bindings for directional focus movement (Simon)
    - reminder, key actions are: FocusUp, FocusDown, FocusLeft, FocusRight
    WorkspaceCmd.hh/cc Screen.hh/cc WinClient.hh/cc FbCommandFactory.cc
  * Add apps file matching on WM_WINDOW_ROLE (Simon)
    - use "role=string". Particularly useful for gaim+gimp windows
      [app] (role=buddy_list) ...
    ClientPattern.hh/cc FbWindow.hh/cc
*04/04/27:
  * Fix up several toolbar theme items and alignments (Simon)
    - big improvement in look/compatibility of older styles